// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/Breadcrumb Con icone 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <section>
      <nav
        className="breadcrumb-container"
      >
        <nav
          aria-label="breadcrumb"
          className=""
        >
          <ol
            className="breadcrumb"
          >
            <li
              className="breadcrumb-item"
            >
              <svg
                className="icon align-top mr-1 icon-secondary icon-sm sm"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
              >
                <use
                  xlinkHref="sprite.svg#it-star-outline"
                />
              </svg>
              <a
                href="#"
              >
                Home
                <span
                  className="separator"
                >
                  /
                </span>
              </a>
            </li>
            <li
              className="breadcrumb-item"
            >
              <svg
                className="icon align-top mr-1 icon-secondary icon-sm sm"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
              >
                <use
                  xlinkHref="sprite.svg#it-star-outline"
                />
              </svg>
              <a
                href="#"
              >
                Subsection
                <span
                  className="separator"
                >
                  /
                </span>
              </a>
            </li>
            <li
              aria-current="page"
              className="active breadcrumb-item"
            >
              <svg
                className="icon align-top mr-1 icon-secondary icon-sm sm"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
              >
                <use
                  xlinkHref="sprite.svg#it-star-outline"
                />
              </svg>
              <a
                href="#"
              >
                Current section
              </a>
            </li>
          </ol>
        </nav>
      </nav>
    </section>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Breadcrumb Esempi 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <section>
      <nav
        className="breadcrumb-container"
      >
        <nav
          aria-label="breadcrumb"
          className=""
        >
          <ol
            className="breadcrumb"
          >
            <li
              className="breadcrumb-item"
            >
              <a
                href="#"
              >
                Home
                <span
                  className="separator"
                >
                  /
                </span>
              </a>
            </li>
            <li
              className="breadcrumb-item"
            >
              <a
                href="#"
              >
                Subsection
                <span
                  className="separator"
                >
                  /
                </span>
              </a>
            </li>
            <li
              aria-current="page"
              className="active breadcrumb-item"
            >
              <a
                href="#"
              >
                Current section
              </a>
            </li>
          </ol>
        </nav>
      </nav>
      <nav
        className="breadcrumb-container"
      >
        <nav
          aria-label="breadcrumb"
          className=""
        >
          <ol
            className="breadcrumb"
          >
            <li
              className="breadcrumb-item"
            >
              <a
                href="#"
              >
                Home
                <span
                  className="separator"
                >
                  &gt;
                </span>
              </a>
            </li>
            <li
              className="breadcrumb-item"
            >
              <a
                href="#"
              >
                Subsection
                <span
                  className="separator"
                >
                  &gt;
                </span>
              </a>
            </li>
            <li
              aria-current="page"
              className="active breadcrumb-item"
            >
              <a
                href="#"
              >
                Current section
              </a>
            </li>
          </ol>
        </nav>
      </nav>
    </section>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Breadcrumb Su sfondo scuro 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <section>
      <nav
        aria-label="breadcrumb"
        className="breadcrumb-container"
      >
        <ol
          className="breadcrumb dark"
        >
          <li
            className="breadcrumb-item"
          >
            <a
              href="#"
            >
              Home
            </a>
            <span
              className="separator"
            >
              /
            </span>
          </li>
          <li
            className="breadcrumb-item"
          >
            <a
              href="#"
            >
              Subsection
            </a>
            <span
              className="separator"
            >
              /
            </span>
          </li>
          <li
            aria-current="page"
            className="breadcrumb-item active"
          >
            <a
              href="#"
            >
              Current section
            </a>
          </li>
        </ol>
      </nav>
      <nav
        aria-label="breadcrumb"
        className="breadcrumb-container"
      >
        <ol
          className="breadcrumb dark"
        >
          <li
            className="breadcrumb-item"
          >
            <svg
              className="icon align-top mr-1 icon-white icon-sm sm"
              style={
                Object {
                  "ariaHidden": true,
                }
              }
            >
              <use
                xlinkHref="sprite.svg#it-star-outline"
              />
            </svg>
            <a
              href="#"
            >
              Home
            </a>
            <span
              className="separator"
            >
              /
            </span>
          </li>
          <li
            className="breadcrumb-item"
          >
            <svg
              className="icon align-top mr-1 icon-white icon-sm sm"
              style={
                Object {
                  "ariaHidden": true,
                }
              }
            >
              <use
                xlinkHref="sprite.svg#it-star-outline"
              />
            </svg>
            <a
              href="#"
            >
              Subsection
            </a>
            <span
              className="separator"
            >
              /
            </span>
          </li>
          <li
            aria-current="page"
            className="breadcrumb-item active"
          >
            <svg
              className="icon align-top mr-1 icon-white icon-sm sm"
              style={
                Object {
                  "ariaHidden": true,
                }
              }
            >
              <use
                xlinkHref="sprite.svg#it-star-outline"
              />
            </svg>
            <a
              href="#"
            >
              Current section
            </a>
          </li>
        </ol>
      </nav>
      <nav
        aria-label="breadcrumb"
        className="breadcrumb-container"
      >
        <ol
          className="breadcrumb dark"
        >
          <li
            className="breadcrumb-item"
          >
            <svg
              className="icon align-top mr-1 icon-white icon-sm sm"
              style={
                Object {
                  "ariaHidden": true,
                }
              }
            >
              <use
                xlinkHref="sprite.svg#it-star-outline"
              />
            </svg>
            <a
              href="#"
            >
              Home
            </a>
            <span
              className="separator"
            >
              &gt;
            </span>
          </li>
          <li
            className="breadcrumb-item"
          >
            <svg
              className="icon align-top mr-1 icon-white icon-sm sm"
              style={
                Object {
                  "ariaHidden": true,
                }
              }
            >
              <use
                xlinkHref="sprite.svg#it-star-outline"
              />
            </svg>
            <a
              href="#"
            >
              Subsection
            </a>
            <span
              className="separator"
            >
              &gt;
            </span>
          </li>
          <li
            aria-current="page"
            className="breadcrumb-item active"
          >
            <svg
              className="icon align-top mr-1 icon-white icon-sm sm"
              style={
                Object {
                  "ariaHidden": true,
                }
              }
            >
              <use
                xlinkHref="sprite.svg#it-star-outline"
              />
            </svg>
            <a
              href="#"
            >
              Current section
            </a>
          </li>
        </ol>
      </nav>
    </section>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
